BrainAmpSeries Connector v.1.17.0
-feature: enhanced support for GSR preprocessing
-feature: add support for ExG aux channels
-feature: remove raw streaming data option
-feature: remove device counter
-feature: check GUI settings against possible amplifier configuration before connnecting

BrainAmpSeries Connector v.1.16.2
-bugfix: incorrect sample marker values

BrainAmpSeries Connector v.1.16.1
-bugfix: added Hz to sample rate field in GUI
-bugfix: changed 5nV to 500nV in recommended MR settings

BrainAmpSeries Connector v.1.16.0
-feature: MR settings check box
-feature: check settings against amplifier type to ensure compatiblity

BrainAmpSeries Connector v.1.15.1
-bugfix: replaced antialiasing filter coefficients with correct values

BrainAmpSeries Connector v.1.15.0
-fixed incorrect timing of markers in EEG trigger channel due to impropoer downsampling
--NOTE: The signal appearing on the EEG trigger channel, when checked, now reflects the signal at the serial port of the amplifier, not changes to the values at the serial port. 