@@ -13,3 +13,4 @@ sendrawstream=false
 unsampledmarkers=true
 usepolybox=false
 samplingrate=500
+compensatedstreamlag=0
